[gd_scene load_steps=8 format=4 uid="uid://n3d5j6ttog0o"]

[ext_resource type="Script" path="res://scripts/levels/level.gd" id="1_l56ah"]
[ext_resource type="Texture2D" uid="uid://pvijx8un6l8d" path="res://assets/textures/_backgrounds/blue_desert.png" id="1_o0sap"]
[ext_resource type="PackedScene" uid="uid://crpkobop6hgv7" path="res://scripts/entities/slingshot.tscn" id="2_qveha"]
[ext_resource type="Texture2D" uid="uid://btqmjc8bjmp4v" path="res://assets/textures/Other/grass.png" id="3_47v5h"]
[ext_resource type="PackedScene" uid="uid://c4ud0o2v8xlri" path="res://scripts/entities/Bullet.tscn" id="4_6psbs"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7wg1y"]
texture = ExtResource("3_47v5h")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)

[sub_resource type="TileSet" id="TileSet_f8wss"]
tile_size = Vector2i(70, 70)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7wg1y")

[node name="Level" type="Node2D"]
script = ExtResource("1_l56ah")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -101

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.815686, 0.956863, 0.968627, 1)
metadata/_edit_use_anchors_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1433.6, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_o0sap")
offset = Vector2(512, 512)

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(716.8, 0)
scale = Vector2(0.7, 0.7)
texture = ExtResource("1_o0sap")
offset = Vector2(512, 512)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAARAAkAAAAAAAAAAAASAAkAAAAAAAAAAAATAAkAAAAAAAAAAAAUAAkAAAAAAAAAAAAVAAkAAAAAAAAAAAAWAAkAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAkAAAAAAAAAAAAZAAkAAAAAAAAAAAAaAAkAAAAAAAAAAAAbAAkAAAAAAAAAAAAcAAkAAAAAAAAAAAAdAAkAAAAAAAAAAAAeAAkAAAAAAAAAAAAfAAkAAAAAAAAAAAAgAAkAAAAAAAAAAAAhAAkAAAAAAAAAAAAiAAkAAAAAAAAAAAAjAAkAAAAAAAAAAAAkAAkAAAAAAAAAAAAlAAkAAAAAAAAAAAAmAAkAAAAAAAAAAAAnAAkAAAAAAAAAAAAoAAkAAAAAAAAAAAABAPb/AAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAAAAAAEAPb/AAAAAAAAAAAFAPb/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPb/AAAAAAAAAAAIAPb/AAAAAAAAAAAJAPb/AAAAAAAAAAAKAPb/AAAAAAAAAAALAPb/AAAAAAAAAAAMAPb/AAAAAAAAAAANAPb/AAAAAAAAAAAOAPb/AAAAAAAAAAAPAPb/AAAAAAAAAAAQAPb/AAAAAAAAAAARAPb/AAAAAAAAAAASAPb/AAAAAAAAAAATAPb/AAAAAAAAAAAUAPb/AAAAAAAAAAAVAPb/AAAAAAAAAAAWAPb/AAAAAAAAAAAXAPb/AAAAAAAAAAAYAPb/AAAAAAAAAAAZAPb/AAAAAAAAAAAaAPb/AAAAAAAAAAAbAPb/AAAAAAAAAAAcAPb/AAAAAAAAAAAdAPb/AAAAAAAAAAAeAPb/AAAAAAAAAAAfAPb/AAAAAAAAAAAgAPb/AAAAAAAAAAAhAPb/AAAAAAAAAAAiAPb/AAAAAAAAAAAjAPb/AAAAAAAAAAAkAPb/AAAAAAAAAAAlAPb/AAAAAAAAAAAmAPb/AAAAAAAAAAAnAPb/AAAAAAAAAAAoAPb/AAAAAAAAAAD//wkAAAAAAAAAAAD//wgAAAAAAAAAAAD//wcAAAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD///7/AAAAAAAAAAD///3/AAAAAAAAAAD///z/AAAAAAAAAAD///v/AAAAAAAAAAD///r/AAAAAAAAAAD///n/AAAAAAAAAAD///j/AAAAAAAAAAD///f/AAAAAAAAAAD///b/AAAAAAAAAAAAAPb/AAAAAAAAAAApAPb/AAAAAAAAAAApAPf/AAAAAAAAAAApAPj/AAAAAAAAAAApAPn/AAAAAAAAAAApAPr/AAAAAAAAAAApAPv/AAAAAAAAAAApAPz/AAAAAAAAAAApAP3/AAAAAAAAAAApAP7/AAAAAAAAAAApAP//AAAAAAAAAAApAAAAAAAAAAAAAAApAAEAAAAAAAAAAAApAAIAAAAAAAAAAAApAAMAAAAAAAAAAAApAAQAAAAAAAAAAAApAAUAAAAAAAAAAAApAAYAAAAAAAAAAAApAAcAAAAAAAAAAAApAAgAAAAAAAAAAAApAAkAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_f8wss")

[node name="Slingshot" parent="." instance=ExtResource("2_qveha")]
position = Vector2(533, 479)

[node name="Bullets" type="Node2D" parent="."]

[node name="Bullet" parent="Bullets" instance=ExtResource("4_6psbs")]
position = Vector2(439, 588)

[node name="Bullet2" parent="Bullets" instance=ExtResource("4_6psbs")]
position = Vector2(334, 588)

[node name="Timer_Rect" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 510.0
offset_top = 42.0
offset_right = 579.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="Timer_Rect"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "60"

[node name="CountDownTimer" type="Timer" parent="Timer_Rect/TimerLabel"]
unique_name_in_owner = true
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1727, 323)
