[gd_scene load_steps=11 format=4 uid="uid://dmno5y60oap3m"]

[ext_resource type="Script" path="res://scripts/levels/level.gd" id="1_xv3w3"]
[ext_resource type="Texture2D" uid="uid://pvijx8un6l8d" path="res://assets/textures/_backgrounds/blue_desert.png" id="2_y468y"]
[ext_resource type="PackedScene" uid="uid://crpkobop6hgv7" path="res://scripts/entities/slingshot.tscn" id="3_ge2ux"]
[ext_resource type="Texture2D" uid="uid://btqmjc8bjmp4v" path="res://assets/textures/Other/grass.png" id="4_4r4y1"]
[ext_resource type="Texture2D" uid="uid://bcin1ootnmb1x" path="res://assets/textures/Other/sand.png" id="6_8vcv8"]
[ext_resource type="Shader" path="res://shaders/dashline.gdshader" id="7_bgkhr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7wg1y"]
texture = ExtResource("4_4r4y1")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-35, -35, 35, -35, 35, 35, -35, 35)

[sub_resource type="TileSet" id="TileSet_f8wss"]
tile_size = Vector2i(70, 70)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_7wg1y")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6jvwv"]
size = Vector2(67.5, 1259)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yrdyl"]
shader = ExtResource("7_bgkhr")
shader_parameter/dash_length = 10.0
shader_parameter/gap_length = 5.0
shader_parameter/line_color = Vector4(1, 0, 0, 1)

[node name="Level" type="Node2D" node_paths=PackedStringArray("camera_node", "player_node")]
script = ExtResource("1_xv3w3")
camera_node = NodePath("CanvasLayer2/SubViewportContainer/SubViewport/subviewCamera")
player_node = NodePath("subviewMarker")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -101

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.815686, 0.956863, 0.968627, 1)
metadata/_edit_use_anchors_ = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
visible = false
follow_viewport_enabled = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1433.6, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y468y")
offset = Vector2(512, 512)

[node name="Sprite2D2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(716.8, 0)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y468y")
offset = Vector2(512, 512)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y468y")
offset = Vector2(512, 512)

[node name="Sprite2D2" type="Sprite2D" parent="."]
position = Vector2(716.8, 0)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y468y")
offset = Vector2(512, 512)

[node name="Sprite2D3" type="Sprite2D" parent="."]
position = Vector2(1433.6, 0)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y468y")
offset = Vector2(512, 512)

[node name="Sprite2D4" type="Sprite2D" parent="."]
position = Vector2(2150.4, 0)
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_y468y")
offset = Vector2(512, 512)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAARAAkAAAAAAAAAAAASAAkAAAAAAAAAAAATAAkAAAAAAAAAAAAUAAkAAAAAAAAAAAAVAAkAAAAAAAAAAAAWAAkAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAkAAAAAAAAAAAAZAAkAAAAAAAAAAAAaAAkAAAAAAAAAAAAbAAkAAAAAAAAAAAAcAAkAAAAAAAAAAAAdAAkAAAAAAAAAAAAeAAkAAAAAAAAAAAAfAAkAAAAAAAAAAAAgAAkAAAAAAAAAAAAhAAkAAAAAAAAAAAAiAAkAAAAAAAAAAAAjAAkAAAAAAAAAAAAkAAkAAAAAAAAAAAAlAAkAAAAAAAAAAAAmAAkAAAAAAAAAAAAnAAkAAAAAAAAAAAAoAAkAAAAAAAAAAAABAPb/AAAAAAAAAAACAPb/AAAAAAAAAAADAPb/AAAAAAAAAAAEAPb/AAAAAAAAAAAFAPb/AAAAAAAAAAAGAPb/AAAAAAAAAAAHAPb/AAAAAAAAAAAIAPb/AAAAAAAAAAAJAPb/AAAAAAAAAAAKAPb/AAAAAAAAAAALAPb/AAAAAAAAAAAMAPb/AAAAAAAAAAANAPb/AAAAAAAAAAAOAPb/AAAAAAAAAAAPAPb/AAAAAAAAAAAQAPb/AAAAAAAAAAARAPb/AAAAAAAAAAASAPb/AAAAAAAAAAATAPb/AAAAAAAAAAAUAPb/AAAAAAAAAAAVAPb/AAAAAAAAAAAWAPb/AAAAAAAAAAAXAPb/AAAAAAAAAAAYAPb/AAAAAAAAAAAZAPb/AAAAAAAAAAAaAPb/AAAAAAAAAAAbAPb/AAAAAAAAAAAcAPb/AAAAAAAAAAAdAPb/AAAAAAAAAAAeAPb/AAAAAAAAAAAfAPb/AAAAAAAAAAAgAPb/AAAAAAAAAAAhAPb/AAAAAAAAAAAiAPb/AAAAAAAAAAAjAPb/AAAAAAAAAAAkAPb/AAAAAAAAAAAlAPb/AAAAAAAAAAAmAPb/AAAAAAAAAAAnAPb/AAAAAAAAAAAoAPb/AAAAAAAAAAD//wkAAAAAAAAAAAD//wgAAAAAAAAAAAD//wcAAAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAD/////AAAAAAAAAAD///7/AAAAAAAAAAD///3/AAAAAAAAAAD///z/AAAAAAAAAAD///v/AAAAAAAAAAD///r/AAAAAAAAAAD///n/AAAAAAAAAAD///j/AAAAAAAAAAD///f/AAAAAAAAAAD///b/AAAAAAAAAAAAAPb/AAAAAAAAAAApAPb/AAAAAAAAAAApAPf/AAAAAAAAAAApAPj/AAAAAAAAAAApAPn/AAAAAAAAAAApAPr/AAAAAAAAAAApAPv/AAAAAAAAAAApAPz/AAAAAAAAAAApAP3/AAAAAAAAAAApAP7/AAAAAAAAAAApAP//AAAAAAAAAAApAAAAAAAAAAAAAAApAAEAAAAAAAAAAAApAAIAAAAAAAAAAAApAAMAAAAAAAAAAAApAAQAAAAAAAAAAAApAAUAAAAAAAAAAAApAAYAAAAAAAAAAAApAAcAAAAAAAAAAAApAAgAAAAAAAAAAAApAAkAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_f8wss")

[node name="Slingshot" parent="." instance=ExtResource("3_ge2ux")]
position = Vector2(533, 479)

[node name="Bullets" type="Node2D" parent="."]
position = Vector2(399, 606)

[node name="Timer_Rect" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 510.0
offset_top = 42.0
offset_right = 579.0
offset_bottom = 125.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerLabel" type="Label" parent="Timer_Rect"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60

[node name="CountDownTimer" type="Timer" parent="Timer_Rect/TimerLabel"]
unique_name_in_owner = true
autostart = true

[node name="GenerateRocks" type="Marker2D" parent="."]
position = Vector2(1729, -209)
rotation = 1.57079

[node name="GenerateRocks2" type="Marker2D" parent="."]
position = Vector2(1789, -215)
rotation = 1.57079

[node name="GenerateRocks3" type="Marker2D" parent="."]
position = Vector2(1858, -198)
rotation = 1.57079

[node name="subviewMarker" type="Marker2D" parent="."]
position = Vector2(1818, 335)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 2

[node name="btn_reload" type="Button" parent="CanvasLayer2"]
offset_left = 45.0
offset_top = 463.0
offset_right = 202.0
offset_bottom = 494.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "集结部队！"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer2/btn_reload"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReloadTimer" type="Timer" parent="CanvasLayer2/btn_reload"]

[node name="cash_label" type="Label" parent="CanvasLayer2"]
offset_left = 20.0
offset_top = 55.0
offset_right = 231.0
offset_bottom = 110.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "cash: $ 0"

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer2"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 139.0
offset_right = -920.0
offset_bottom = -245.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer2/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(199, 264)
render_target_update_mode = 4

[node name="subviewCamera" type="Camera2D" parent="CanvasLayer2/SubViewportContainer/SubViewport"]
self_modulate = Color(1, 1, 1, 0.231373)
zoom = Vector2(0.4, 0.4)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1727, 323)

[node name="Barrier" type="StaticBody2D" parent="."]
position = Vector2(1695, 499)
collision_layer = 4
collision_mask = 6

[node name="Sprite2D" type="Sprite2D" parent="Barrier"]
self_modulate = Color(1, 1, 1, 0.117647)
position = Vector2(-54, -500.5)
scale = Vector2(1, 17.9857)
texture = ExtResource("6_8vcv8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Barrier"]
position = Vector2(-52.75, -498.5)
shape = SubResource("RectangleShape2D_6jvwv")

[node name="Sprite2D2" type="Sprite2D" parent="Barrier"]
self_modulate = Color(1, 1, 1, 0.117647)
position = Vector2(287, -499.5)
scale = Vector2(1, 17.8714)
texture = ExtResource("6_8vcv8")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Barrier"]
position = Vector2(291, -498)
shape = SubResource("RectangleShape2D_6jvwv")

[node name="cutLine" type="Line2D" parent="Barrier"]
material = SubResource("ShaderMaterial_yrdyl")
position = Vector2(-2, -1)
points = PackedVector2Array(-19, -478, 265, -478)
width = 5.0
default_color = Color(1, 0, 0, 0.470588)

[node name="cutLineMarker" type="Marker2D" parent="Barrier"]
unique_name_in_owner = true
position = Vector2(112, -481)

[node name="upright" type="Marker2D" parent="."]
position = Vector2(2929, -687)

[node name="downleft" type="Marker2D" parent="."]
position = Vector2(-68, 699)
